# gullak

./: .dockerignore  .env.example  .env.production.example  .env.sample  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Justfile  LICENSE  Makefile  PLAN.md  README.md  SYNC_BUG_REPORT.md  TODO  app.go  blog.md  config.go  config.sample.toml  db.go  design.md  docker-compose.prod.yml  docker-compose.yml  dockerignore.yml  env.sample  explore-brief.md  flake.nix  go.mod  go.sum  handlers.go  handoff.md  http.go  llm.go  main.go  models.go  official-demo.ledger  (+12 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.hallmark/: log.json  preflight.json
app/: .gitignore  .metadata  ACCEPTANCE.md  LICENSE  README.md  analysis_options.yaml  handoff.md  pubspec.yaml
docs/: AGENTS.md  API.md  api.md  architecture.md  configuration.md  deployment.md  destinations.md  development.md  goals.md  index.md  install.md  ledger.md  receipts.md  self-hosting.md  sync-crdt-v2.md  troubleshooting.md  whatsapp.md
dummy/: index.html
evidence/: package-lock.json  package.json
explorations/: fdroid-readiness.md  public-release-audit.md  ux-bets.md
pi-server/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
plans/: sms-parsing-gemma-evaluation.md
scripts/: seed_data.py
site/: index.html
sync_test_vectors/: crdt_v1.json
test_data/: chat.db  (+1 more)
(+774 files in other folders)
